--- a/demo/plugin_fancytree.html
+++ b/demo/plugin_fancytree.html
@@ -236,6 +236,11 @@
                             </a>
                         </li>
                         <li class="menu-item">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#cssProgressBars">
+                                <span class="menu-text">Progress Bars</span>
+                            </a>
+                        </li>
+                        <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/css_components.html#cssPanels">
                                 <span class="menu-text">Panels</span>
                             </a>
@@ -263,9 +268,66 @@
                         <span class="menu-text">JS Components</span>
                     </a>
                     <ul class="sidebar-submenu">
+                        <li class="menu-item menu-item-has-children">
+                            <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html">
+                                <span class="menu-text">Complex form elements</span>
+                            </a>
+                            <ul class="sidebar-submenu">
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html">
+                                        <span class="menu-text">Masked inputs</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsTextareaWithInputLimiter">
+                                        <span class="menu-text">Textarea with input limiter</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsDatePicker">
+                                        <span class="menu-text">Date picker</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsFileUpload">
+                                        <span class="menu-text">File upload</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsSelectizeTagInput">
+                                        <span class="menu-text">Selectize tag input</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsJQueryAutocomplete">
+                                        <span class="menu-text">jQuery autocomplete</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsJQueryUISliders">
+                                        <span class="menu-text">jQuery UI Sliders</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsJQueryNumericInput">
+                                        <span class="menu-text">jQuery numeric input</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsChosenJsAutocomplete">
+                                        <span class="menu-text">Chosen.js autocomplete</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
                         <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/js_components.html">
                                 <span class="menu-text">Modals</span>
+                            </a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="/emag-apps-ui-kit/demo/js_components.html#jsCustomErrorMessages">
+                                <span class="menu-text">Custom error messages</span>
                             </a>
                         </li>
                         <li class="menu-item">
@@ -281,6 +343,11 @@
                         <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/js_components.html#jsUtilities">
                                 <span class="menu-text">Utilities</span>
+                            </a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="/emag-apps-ui-kit/demo/js_components.html#jsBlockUI">
+                                <span class="menu-text">Block UI</span>
                             </a>
                         </li>
                         <li class="menu-item">
@@ -365,7 +432,7 @@
     </div>
     <div class="sidebar-control">
         <div class="sidebar-toggle">
-            <button type="button" id="toggle-sidebar-size-btn" class="btn btn-default btn-sm">
+            <button type="button" id="toggle-sidebar-size-btn" class="btn btn-link btn-sm">
                 <i class="menu-icon fa fa-arrow-left"></i>
             </button>
         </div>
@@ -375,96 +442,88 @@
         <div class="main-content">
             <div class="page-content">
                 <div class="jumbotron content-header">
-                    <div class="row">
-                        <div class="col-md-8 col-md-offset-2">
-                            <div class="container-fluid">
-                                <p>eMAG Apps UI KIT</p>
-                                <p><b>Fancytree</b></p>
-                            </div>
-                        </div>
+                    <div class="container-fluid">
+                        <p>eMAG Apps UI KIT</p>
+                        <p><b>Fancytree</b></p>
                     </div>
                 </div>
                 <section id="fancytreeStandardId" class="pad-top-40">
-                    <div class="row">
-                        <div class="col-md-8 col-md-offset-2">
-                            <div class="show-panel">
-                                <div class="show-panel-body">
-                                    <h4 class="text-primary"><strong>Fancytree.js</strong></h4>
-                                    <p><strong>Used for displaying categories, subcategories and products</strong></p>
-                                    <p>You can familiarize yourself with more options and settings by checking out <a href="https://github.com/mar10/fancytree" target="_blank">https://github.com/mar10/fancytree</a></p>
-                                </div>
-                                <hr/>
-                                <div class="show-panel-body">
-                                    <p><strong>Fancytree inpage example</strong></p>
-                                    <div class="pad-sep-20">
-                                        <div class="row">
-                                            <div class="col-lg-12">
-                                                <div id="tree">
-                                                </div>
-                                            </div>
+                    <div class="show-panel">
+                        <div class="show-panel-body">
+                            <h4 class="text-primary"><strong>Fancytree.js</strong></h4>
+                            <p><strong>Used for displaying categories, subcategories and products</strong></p>
+                            <p>You can familiarize yourself with more options and settings by checking out <a href="https://github.com/mar10/fancytree" target="_blank">https://github.com/mar10/fancytree</a></p>
+                        </div>
+                        <hr/>
+                        <div class="show-panel-body">
+                            <p><strong>Fancytree inpage example</strong></p>
+                            <div class="pad-sep-20">
+                                <div class="row">
+                                    <div class="col-lg-12">
+                                        <div id="tree">
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="show-panel">
-                                <div class="show-panel-body">
-                                    <div class="form-group">
-                                        <label for="category_treeDefault">Category tree</label>
-                                        <div class="hide-with-opacity">
-                                            <select id="category_tree_default" multiple="multiple">
-                                                <option value=""></option>
-                                                <option value="31">Software</option>
-                                                <option value="175">Antivirus</option>
-                                                <option value="221">Sisteme de operare</option>
-                                                <option value="225">Aplicatii desktop OEM</option>
-                                                <option value="226" selected="selected">Medii de dezvoltare OEM</option>
-                                                <option value="227" selected="selected">Sisteme de operare server OEM</option>
-                                                <option value="228">Aplicatii server OEM</option>
-                                                <option value="340">Clienti server OEM</option>
-                                                <option value="222">Office & Aplicatii Desktop</option>
-                                                <option value="229">Sisteme de operare Retail</option>
-                                                <option value="230">Aplicatii desktop Retail</option>
-                                                <option value="231">Medii de dezvoltare Retail</option>
-                                                <option value="232">Sisteme de operare server Retail</option>
-                                                <option value="233">Aplicatii server Retail</option>
-                                                <option value="274">Documentatii Retail</option>
-                                                <option value="344">Clienti server retail</option>
-                                                <option value="361">Editare foto-video</option>
-                                                <option value="1512">AC</option>
-                                                <option value="1513">Photo DSLR</option>
-                                                <option value="378">Aparate foto D-SLR</option>
-                                                <option value="407">Accesorii aparate foto DSLR si Mirrorless</option>
-                                                <option value="443">Kit curatare DSLR</option>
-                                                <option value="1117">Aparate foto Mirrorless</option>
-                                                <option value="1514">Photo Compact</option>
-                                                <option value="54">Aparate foto compacte</option>
-                                                <option value="1517">AV & HiFi</option>
-                                                <option value="80">Videoproiectoare</option>
-                                                <option value="117">DVD & Blu-Ray Playere</option>
-                                                <option value="408">Audio HI-FI</option>
-                                                <option value="204">Playere & Receivere</option>
-                                                <option value="539">Amplificatoare</option>
-                                                <option value="540">Playere</option>
-                                                <option value="542">Boxe</option>
-                                                <option value="635">Sisteme audio wireless</option>
-                                                <option value="1061">Pick-Up</option>
-                                                <option value="1150">Accesorii Audio Hi-Fi</option>
-                                                <option value="467">Mediaplayere</option>
-                                                <option value="1133">Home Audio</option>
-                                                <option value="113">Sisteme Home Cinema</option>
-                                                <option value="124">Sisteme audio</option>
-                                                <option value="162">Radiocasetofoane</option>
-                                                <option value="1140">Docking</option>
-                                                <option value="1534">Other Products</option>
-                                            </select>
-                                        </div>
-                                        <div class="input-group input-group-no-separation">
-                                            <div class="form-control" id="id_category_tree_default"></div>
-                                            <span class="input-group-addon">
-                                                <i class="fa fa-sitemap"></i>
-                                            </span>
-                                        </div>
-                                    </div>
+                        </div>
+                    </div>
+                    <div class="show-panel">
+                        <div class="show-panel-body">
+                            <div class="form-group">
+                                <label for="category_treeDefault">Category tree</label>
+                                <div class="hide-with-opacity">
+                                    <select id="category_tree_default" multiple="multiple">
+                                        <option value=""></option>
+                                        <option value="31">Software</option>
+                                        <option value="175">Antivirus</option>
+                                        <option value="221">Sisteme de operare</option>
+                                        <option value="225">Aplicatii desktop OEM</option>
+                                        <option value="226" selected="selected">Medii de dezvoltare OEM</option>
+                                        <option value="227" selected="selected">Sisteme de operare server OEM</option>
+                                        <option value="228">Aplicatii server OEM</option>
+                                        <option value="340">Clienti server OEM</option>
+                                        <option value="222">Office & Aplicatii Desktop</option>
+                                        <option value="229">Sisteme de operare Retail</option>
+                                        <option value="230">Aplicatii desktop Retail</option>
+                                        <option value="231">Medii de dezvoltare Retail</option>
+                                        <option value="232">Sisteme de operare server Retail</option>
+                                        <option value="233">Aplicatii server Retail</option>
+                                        <option value="274">Documentatii Retail</option>
+                                        <option value="344">Clienti server retail</option>
+                                        <option value="361">Editare foto-video</option>
+                                        <option value="1512">AC</option>
+                                        <option value="1513">Photo DSLR</option>
+                                        <option value="378">Aparate foto D-SLR</option>
+                                        <option value="407">Accesorii aparate foto DSLR si Mirrorless</option>
+                                        <option value="443">Kit curatare DSLR</option>
+                                        <option value="1117">Aparate foto Mirrorless</option>
+                                        <option value="1514">Photo Compact</option>
+                                        <option value="54">Aparate foto compacte</option>
+                                        <option value="1517">AV & HiFi</option>
+                                        <option value="80">Videoproiectoare</option>
+                                        <option value="117">DVD & Blu-Ray Playere</option>
+                                        <option value="408">Audio HI-FI</option>
+                                        <option value="204">Playere & Receivere</option>
+                                        <option value="539">Amplificatoare</option>
+                                        <option value="540">Playere</option>
+                                        <option value="542">Boxe</option>
+                                        <option value="635">Sisteme audio wireless</option>
+                                        <option value="1061">Pick-Up</option>
+                                        <option value="1150">Accesorii Audio Hi-Fi</option>
+                                        <option value="467">Mediaplayere</option>
+                                        <option value="1133">Home Audio</option>
+                                        <option value="113">Sisteme Home Cinema</option>
+                                        <option value="124">Sisteme audio</option>
+                                        <option value="162">Radiocasetofoane</option>
+                                        <option value="1140">Docking</option>
+                                        <option value="1534">Other Products</option>
+                                    </select>
+                                </div>
+                                <div class="input-group input-group-no-separation">
+                                    <div class="form-control" id="id_category_tree_default"></div>
+                                    <span class="input-group-addon">
+                                        <i class="fa fa-sitemap"></i>
+                                    </span>
                                 </div>
                             </div>
                         </div>
