--- a/demo/plugin_gallery.html
+++ b/demo/plugin_gallery.html
@@ -232,6 +232,11 @@
                             </a>
                         </li>
                         <li class="menu-item">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#cssProgressBars">
+                                <span class="menu-text">Progress Bars</span>
+                            </a>
+                        </li>
+                        <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/css_components.html#cssPanels">
                                 <span class="menu-text">Panels</span>
                             </a>
@@ -259,9 +264,66 @@
                         <span class="menu-text">JS Components</span>
                     </a>
                     <ul class="sidebar-submenu">
+                        <li class="menu-item menu-item-has-children">
+                            <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html">
+                                <span class="menu-text">Complex form elements</span>
+                            </a>
+                            <ul class="sidebar-submenu">
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html">
+                                        <span class="menu-text">Masked inputs</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsTextareaWithInputLimiter">
+                                        <span class="menu-text">Textarea with input limiter</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsDatePicker">
+                                        <span class="menu-text">Date picker</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsFileUpload">
+                                        <span class="menu-text">File upload</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsSelectizeTagInput">
+                                        <span class="menu-text">Selectize tag input</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsJQueryAutocomplete">
+                                        <span class="menu-text">jQuery autocomplete</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsJQueryUISliders">
+                                        <span class="menu-text">jQuery UI Sliders</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsJQueryNumericInput">
+                                        <span class="menu-text">jQuery numeric input</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsChosenJsAutocomplete">
+                                        <span class="menu-text">Chosen.js autocomplete</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
                         <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/js_components.html">
                                 <span class="menu-text">Modals</span>
+                            </a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="/emag-apps-ui-kit/demo/js_components.html#jsCustomErrorMessages">
+                                <span class="menu-text">Custom error messages</span>
                             </a>
                         </li>
                         <li class="menu-item">
@@ -277,6 +339,11 @@
                         <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/js_components.html#jsUtilities">
                                 <span class="menu-text">Utilities</span>
+                            </a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="/emag-apps-ui-kit/demo/js_components.html#jsBlockUI">
+                                <span class="menu-text">Block UI</span>
                             </a>
                         </li>
                         <li class="menu-item">
@@ -361,7 +428,7 @@
     </div>
     <div class="sidebar-control">
         <div class="sidebar-toggle">
-            <button type="button" id="toggle-sidebar-size-btn" class="btn btn-default btn-sm">
+            <button type="button" id="toggle-sidebar-size-btn" class="btn btn-link btn-sm">
                 <i class="menu-icon fa fa-arrow-left"></i>
             </button>
         </div>
@@ -371,81 +438,73 @@
                 <div class="main-content">
                     <div class="page-content">
                         <div class="jumbotron content-header">
-                            <div class="row">
-                                <div class="col-md-8 col-md-offset-2">
-                                    <div class="container-fluid">
-                                        <p>eMAG Apps UI KIT</p>
-                                        <p><b>Image gallery</b></p>
-                                    </div>
-                                 </div>
+                            <div class="container-fluid">
+                                <p>eMAG Apps UI KIT</p>
+                                <p><b>Image gallery</b></p>
                             </div>
                         </div>
                         <section id="summernoteStandard" class="pad-top-40">
-                            <div class="row">
-                                <div class="col-md-8 col-md-offset-2">
-                                    <div class="show-panel">
-                                        <div class="show-panel-body">
-                                            <h4 class="text-primary"><strong>Magnific.js</strong></h4>
-                                            <p><strong>Standard install</strong></p>
-                                            <p>You can familiarize yourself with more options and settings by checking out <a href="http://dimsemenov.com/plugins/magnific-popup/" target="_blank">http://dimsemenov.com/plugins/magnific-popup/</a></p>
-                                        </div>
-                                        <div class="show-panel-example">
-                                            <div class="show-panel-body">
-                                                <div class="pad-top-40">
-                                                    <div class="row">
-                                                        <div class="col-lg-10 col-lg-offset-1" data-showcase="example">
-                                                            <div id="default_magnific" class="zoom-gallery zg-grid">
-                                                                <a href="img/photo-1.jpg" data-source="https://unsplash.com/photos/4jcFu1byopQ" title="by Davide Ragusa">
-                                                                    <img src="img/photo-1.jpg" alt="gallery-image">
-                                                                </a>
-                                                                <a href="img/photo-4.jpg" data-source="https://unsplash.com/photos/BeIvjuz6k2k" title="by Adrian Pelletier">
-                                                                    <img src="img/photo-4.jpg" alt="gallery-image">
-                                                                </a>
-                                                                <a href="img/photo-5.jpg" data-source="https://unsplash.com/photos/DjlKxYFJlTc" title="by Elliott Engelmann">
-                                                                    <img src="img/photo-5.jpg" alt="gallery-image">
-                                                                </a>
-                                                                <a href="img/photo-6.jpg" data-source="http://www.gettyimages.com/license/484398332" title="by Carl Court">
-                                                                    <img src="img/photo-6.jpg" alt="gallery-image">
-                                                                </a>
-                                                                <a href="img/photo-7.jpg" data-source="http://www.volvooceanrace.com/en/home.html" title="Volvo Ocean Race/Team Vestas Wind/2015">
-                                                                    <img src="img/photo-7.jpg" alt="gallery-image">
-                                                                </a>
-                                                                <a href="img/photo-8.gif" data-source="https://www.youtube.com/watch?v=o0u4M6vppCI" title="'Shia LaBeouf' Live - Rob Cantor">
-                                                                    <img src="img/photo-8.gif" alt="gallery-image">
-                                                                </a>
-                                                            </div>
-                                                        </div>
+                            <div class="show-panel">
+                                <div class="show-panel-body">
+                                    <h4 class="text-primary"><strong>Magnific.js</strong></h4>
+                                    <p><strong>Standard install</strong></p>
+                                    <p>You can familiarize yourself with more options and settings by checking out <a href="http://dimsemenov.com/plugins/magnific-popup/" target="_blank">http://dimsemenov.com/plugins/magnific-popup/</a></p>
+                                </div>
+                                <div class="show-panel-example">
+                                    <div class="show-panel-body">
+                                        <div class="pad-top-40">
+                                            <div class="row">
+                                                <div class="col-lg-10 col-lg-offset-1" data-showcase="example">
+                                                    <div id="default_magnific" class="zoom-gallery zg-grid">
+                                                        <a href="img/photo-1.jpg" data-source="https://unsplash.com/photos/4jcFu1byopQ" title="by Davide Ragusa">
+                                                            <img src="img/photo-1.jpg" alt="gallery-image">
+                                                        </a>
+                                                        <a href="img/photo-4.jpg" data-source="https://unsplash.com/photos/BeIvjuz6k2k" title="by Adrian Pelletier">
+                                                            <img src="img/photo-4.jpg" alt="gallery-image">
+                                                        </a>
+                                                        <a href="img/photo-5.jpg" data-source="https://unsplash.com/photos/DjlKxYFJlTc" title="by Elliott Engelmann">
+                                                            <img src="img/photo-5.jpg" alt="gallery-image">
+                                                        </a>
+                                                        <a href="img/photo-6.jpg" data-source="http://www.gettyimages.com/license/484398332" title="by Carl Court">
+                                                            <img src="img/photo-6.jpg" alt="gallery-image">
+                                                        </a>
+                                                        <a href="img/photo-7.jpg" data-source="http://www.volvooceanrace.com/en/home.html" title="Volvo Ocean Race/Team Vestas Wind/2015">
+                                                            <img src="img/photo-7.jpg" alt="gallery-image">
+                                                        </a>
+                                                        <a href="img/photo-8.gif" data-source="https://www.youtube.com/watch?v=o0u4M6vppCI" title="'Shia LaBeouf' Live - Rob Cantor">
+                                                            <img src="img/photo-8.gif" alt="gallery-image">
+                                                        </a>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="show-panel">
-                                        <div class="show-panel-example">
-                                            <div class="show-panel-body">
-                                                <p><strong>All AJAX</strong></p>
-                                                <p>Sometimes, you may want to surprise your audience.</p>
-                                                <div class="pad-sep-40">
-                                                    <div class="row">
-                                                        <div class="col-lg-10 col-lg-offset-1 text-center">
-                                                            <a href="img/photo-2.jpg" id="btnajax_magnific" class="btn btn-primary">Show me an image of a house.</a><br>
-                                                        </div>
-                                                    </div>
+                                </div>
+                            </div>
+                            <div class="show-panel">
+                                <div class="show-panel-example">
+                                    <div class="show-panel-body">
+                                        <p><strong>All AJAX</strong></p>
+                                        <p>Sometimes, you may want to surprise your audience.</p>
+                                        <div class="pad-sep-40">
+                                            <div class="row">
+                                                <div class="col-lg-10 col-lg-offset-1 text-center">
+                                                    <a href="img/photo-2.jpg" id="btnajax_magnific" class="btn btn-primary">Show me an image of a house.</a><br>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="show-panel">
-                                        <div class="show-panel-example">
-                                            <div class="show-panel-body">
-                                                <p><strong>Youtube/Vimeo/etc. embeds</strong></p>
-                                                <p>Sometimes, you may want to surprise your audience.</p>
-                                                <div class="pad-sep-40">
-                                                    <div class="row">
-                                                        <div class="col-lg-10 col-lg-offset-1 text-center">
-                                                            <a href="https://www.youtube.com/watch?v=HgzGwKwLmgM" id="youtube_magnific" class="btn btn-primary">Open YouTube video</a><br>
-                                                        </div>
-                                                    </div>
+                                </div>
+                            </div>
+                            <div class="show-panel">
+                                <div class="show-panel-example">
+                                    <div class="show-panel-body">
+                                        <p><strong>Youtube/Vimeo/etc. embeds</strong></p>
+                                        <p>Sometimes, you may want to surprise your audience.</p>
+                                        <div class="pad-sep-40">
+                                            <div class="row">
+                                                <div class="col-lg-10 col-lg-offset-1 text-center">
+                                                    <a href="https://www.youtube.com/watch?v=HgzGwKwLmgM" id="youtube_magnific" class="btn btn-primary">Open YouTube video</a><br>
                                                 </div>
                                             </div>
                                         </div>
