--- a/demo/blank_page.html
+++ b/demo/blank_page.html
@@ -234,6 +234,11 @@
                             </a>
                         </li>
                         <li class="menu-item">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#cssProgressBars">
+                                <span class="menu-text">Progress Bars</span>
+                            </a>
+                        </li>
+                        <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/css_components.html#cssPanels">
                                 <span class="menu-text">Panels</span>
                             </a>
@@ -261,9 +266,66 @@
                         <span class="menu-text">JS Components</span>
                     </a>
                     <ul class="sidebar-submenu">
+                        <li class="menu-item menu-item-has-children">
+                            <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html">
+                                <span class="menu-text">Complex form elements</span>
+                            </a>
+                            <ul class="sidebar-submenu">
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html">
+                                        <span class="menu-text">Masked inputs</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsTextareaWithInputLimiter">
+                                        <span class="menu-text">Textarea with input limiter</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsDatePicker">
+                                        <span class="menu-text">Date picker</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsFileUpload">
+                                        <span class="menu-text">File upload</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsSelectizeTagInput">
+                                        <span class="menu-text">Selectize tag input</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsJQueryAutocomplete">
+                                        <span class="menu-text">jQuery autocomplete</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsJQueryUISliders">
+                                        <span class="menu-text">jQuery UI Sliders</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsJQueryNumericInput">
+                                        <span class="menu-text">jQuery numeric input</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsChosenJsAutocomplete">
+                                        <span class="menu-text">Chosen.js autocomplete</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
                         <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/js_components.html">
                                 <span class="menu-text">Modals</span>
+                            </a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="/emag-apps-ui-kit/demo/js_components.html#jsCustomErrorMessages">
+                                <span class="menu-text">Custom error messages</span>
                             </a>
                         </li>
                         <li class="menu-item">
@@ -279,6 +341,11 @@
                         <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/js_components.html#jsUtilities">
                                 <span class="menu-text">Utilities</span>
+                            </a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="/emag-apps-ui-kit/demo/js_components.html#jsBlockUI">
+                                <span class="menu-text">Block UI</span>
                             </a>
                         </li>
                         <li class="menu-item">
@@ -363,7 +430,7 @@
     </div>
     <div class="sidebar-control">
         <div class="sidebar-toggle">
-            <button type="button" id="toggle-sidebar-size-btn" class="btn btn-default btn-sm">
+            <button type="button" id="toggle-sidebar-size-btn" class="btn btn-link btn-sm">
                 <i class="menu-icon fa fa-arrow-left"></i>
             </button>
         </div>
