--- a/demo/plugin_ajax_modals.html
+++ b/demo/plugin_ajax_modals.html
@@ -231,6 +231,11 @@
                             </a>
                         </li>
                         <li class="menu-item">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#cssProgressBars">
+                                <span class="menu-text">Progress Bars</span>
+                            </a>
+                        </li>
+                        <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/css_components.html#cssPanels">
                                 <span class="menu-text">Panels</span>
                             </a>
@@ -258,9 +263,66 @@
                         <span class="menu-text">JS Components</span>
                     </a>
                     <ul class="sidebar-submenu">
+                        <li class="menu-item menu-item-has-children">
+                            <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html">
+                                <span class="menu-text">Complex form elements</span>
+                            </a>
+                            <ul class="sidebar-submenu">
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html">
+                                        <span class="menu-text">Masked inputs</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsTextareaWithInputLimiter">
+                                        <span class="menu-text">Textarea with input limiter</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsDatePicker">
+                                        <span class="menu-text">Date picker</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsFileUpload">
+                                        <span class="menu-text">File upload</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsSelectizeTagInput">
+                                        <span class="menu-text">Selectize tag input</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsJQueryAutocomplete">
+                                        <span class="menu-text">jQuery autocomplete</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsJQueryUISliders">
+                                        <span class="menu-text">jQuery UI Sliders</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsJQueryNumericInput">
+                                        <span class="menu-text">jQuery numeric input</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsChosenJsAutocomplete">
+                                        <span class="menu-text">Chosen.js autocomplete</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
                         <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/js_components.html">
                                 <span class="menu-text">Modals</span>
+                            </a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="/emag-apps-ui-kit/demo/js_components.html#jsCustomErrorMessages">
+                                <span class="menu-text">Custom error messages</span>
                             </a>
                         </li>
                         <li class="menu-item">
@@ -276,6 +338,11 @@
                         <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/js_components.html#jsUtilities">
                                 <span class="menu-text">Utilities</span>
+                            </a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="/emag-apps-ui-kit/demo/js_components.html#jsBlockUI">
+                                <span class="menu-text">Block UI</span>
                             </a>
                         </li>
                         <li class="menu-item">
@@ -360,7 +427,7 @@
     </div>
     <div class="sidebar-control">
         <div class="sidebar-toggle">
-            <button type="button" id="toggle-sidebar-size-btn" class="btn btn-default btn-sm">
+            <button type="button" id="toggle-sidebar-size-btn" class="btn btn-link btn-sm">
                 <i class="menu-icon fa fa-arrow-left"></i>
             </button>
         </div>
@@ -370,30 +437,25 @@
                 <div class="main-content">
                     <div class="page-content">
                         <div class="jumbotron content-header">
-                            <div class="row">
-                                <div class="col-md-8 col-md-offset-2">
-                                    <div class="container-fluid">
-                                        <p>eMAG Apps UI KIT</p>
-                                        <p><b>AJAX Modals</b></p>
-                                    </div>
-                                 </div>
+                            <div class="container-fluid">
+                                <p>eMAG Apps UI KIT</p>
+                                <p><b>AJAX Modals</b></p>
                             </div>
                         </div>
                         <section id="summernoteStandard" class="pad-top-40">
-                            <div class="row">
-                                <div class="col-md-8 col-md-offset-2">
-                                    <div class="show-panel">
-                                        <div class="show-panel-body">
-                                            <h4 class="text-primary"><strong>eMAG Apps UI KIT - AJAX Modals</strong></h4>
-                                            <p><strong>Works great with the standard Bootstrap version</strong></p>
-                                            <div class="pad-sep-20">
-                                                <button id="ajax_modal_start" type="button" class="btn btn-primary">Show me an ajax modal.</button>
-                                            </div>
-                                        </div>
-                                        <div class="show-panel-example">                                       
-                                            <div class="show-panel-footer">
-                                                <pre class="language-javascript">
-                                                    <code class="language-javascript">
+
+                            <div class="show-panel">
+                                <div class="show-panel-body">
+                                    <h4 class="text-primary"><strong>eMAG Apps UI KIT - AJAX Modals</strong></h4>
+                                    <p><strong>Works great with the standard Bootstrap version</strong></p>
+                                    <div class="pad-sep-20">
+                                        <button id="ajax_modal_start" type="button" class="btn btn-primary">Show me an ajax modal.</button>
+                                    </div>
+                                </div>
+                                <div class="show-panel-example">
+                                    <div class="show-panel-footer">
+                                        <pre class="language-javascript">
+                                            <code class="language-javascript">
 var modalTest = new PhotonModal({
     id: 'testModal',
     title: 'This is an AJAX modal',
@@ -417,10 +479,8 @@ var modalTest = new PhotonModal({
         }
     }
 }); 
-                                                    </code>
-                                                </pre>
-                                            </div>
-                                        </div>
+                                            </code>
+                                        </pre>
                                     </div>
                                 </div>
                             </div>
